// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Check matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Check
    classes={
      Object {
        "active": "active",
        "check": "check",
        "cont": "cont",
        "disabled": "disabled",
        "label": "label",
        "right": "right",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="check"
        />,
        undefined,
        undefined,
      ],
      "className": "cont",
      "id": undefined,
      "onClick": [Function],
      "style": undefined,
      "tabIndex": 0,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "check",
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      undefined,
      undefined,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="check"
          />,
          undefined,
          undefined,
        ],
        "className": "cont",
        "id": undefined,
        "onClick": [Function],
        "style": undefined,
        "tabIndex": 0,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "check",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        undefined,
        undefined,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Check styles matches the snapshot 1`] = `
Object {
  "active": Object {
    "& $check": Object {
      "&:after": Object {
        "background": "url(data:image/svg+xml;base64,PHN2ZyB2ZXJzaW9uPSIxLjEiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgeG1sbnM6eGxpbms9Imh0dHA6Ly93d3cudzMub3JnLzE5OTkveGxpbmsiIHg9IjBweCIgeT0iMHB4IgogICAgICAgICAgICAJIHZpZXdCb3g9IjAgMCAyNCAyNCIgc3R5bGU9ImVuYWJsZS1iYWNrZ3JvdW5kOm5ldyAwIDAgMjQgMjQ7IiB4bWw6c3BhY2U9InByZXNlcnZlIj4KICAgICAgICAgICAgPHBhdGggZmlsbD0iI2ZmZmZmZiIgZD0iTTE4LjI4MDI1MTgsNy4zMDU3NjQ4IEwxOS43MTk3NDgyLDguNjk0MjM1MiBMMTEuMDM4NzcyNCwxNy42OTQyMzUyIEMxMC42NzM3NTY4LDE4LjA3MjY2NSAxMC4wNzgwMzIzLAogICAgICAgICAgICAxOC4xMDM3OTczIDkuNjc1NTU5NzIsMTcuNzY1NDc2IEw1LjM1NjUzNTU2LDE0LjEzNDg3NDMgTDYuNjQzNDY0NDQsMTIuNjAzOTIyMyBMMTAuMjQ3NjE2NywxNS42MzM1OTc3IEwxOC4yODAyNTE4LDcuMzA1NzY0OCBaIi8+CiAgICAgICAgICAgIDwvc3ZnPg==)",
      },
      "background": "#09ba8a",
      "borderColor": "#09ba8a",
    },
    "& $label": Object {
      "color": "#222222",
    },
  },
  "check": Object {
    "&:after": Object {
      "content": "\\"\\"",
      "display": "block",
      "height": "14px",
      "left": "0",
      "position": "absolute",
      "top": "0",
      "width": "14px",
    },
    "border": "1px solid #bfbfbf",
    "borderRadius": "1px",
    "boxSizing": "border-box",
    "flex": "0 0 16px",
    "float": "left",
    "height": "16px",
    "margin": "4px",
    "position": "relative",
    "transition": "0.3s all",
    "width": "16px",
  },
  "cont": Object {
    "&:after": Object {
      "clear": "both",
      "content": "\\"\\"",
      "display": "table",
    },
    "&:hover $check": Object {
      "borderColor": "#09ba8a",
    },
    "&:hover $label": Object {
      "color": "#222222",
    },
    "boxSizing": "border-box",
    "cursor": "pointer",
    "display": "flex",
    "marginBottom": "15px",
    "outline": "0",
  },
  "disabled": Object {
    "& $check": Object {
      "borderColor": "#e0e0e0",
    },
    "& $label": Object {
      "color": "#bfbfbf",
    },
    "&$active $check": Object {
      "background": "#e0e0e0",
    },
    "pointerEvents": "none",
  },
  "label": Object {
    "color": "#727272",
    "flex": "1",
    "float": "left",
    "fontFamily": "'Open Sans', sans-serif",
    "fontSize": "14px",
    "paddingLeft": "5px",
    "paddingRight": "10px",
    "paddingTop": "3px",
    "transition": "0.3s all",
  },
  "right": Object {
    "color": "#bfbfbf",
    "extend": "label",
    "flex": "none",
    "float": "right",
    "fontSize": "13px",
    "paddingRight": "0",
  },
}
`;

exports[`CheckJSS matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Jss(Check) />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "classes": Object {
        "active": "Check-active-0-1-3",
        "check": "Check-check-0-1-2",
        "cont": "Check-cont-0-1-1",
        "disabled": "Check-disabled-0-1-4",
        "label": "Check-label-0-1-5",
        "right": "Check-right-0-1-6",
      },
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "classes": Object {
          "active": "Check-active-0-1-3",
          "check": "Check-check-0-1-2",
          "cont": "Check-cont-0-1-1",
          "disabled": "Check-disabled-0-1-4",
          "label": "Check-label-0-1-5",
          "right": "Check-right-0-1-6",
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
